--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.486.0",
+    "mysql2": "^3.14.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
