--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.17",
     "@tanstack/react-table": "^8.21.2",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.486.0",
     "mysql2": "^3.14.0",
     "next": "15.2.4",
