--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
